# chatops-backend-base

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  resources-uploading.md
.github/workflows/: ci-cd.yml
src/chatops/: settings.py
src/chatops/api/: auth.py  dependencies.py  main.py
src/chatops/consumers/: result_consumer.py
src/chatops/domain/: chat.py  resource.py  user.py
src/chatops/jobs/: job_stream.py  result_stream.py
tests/: conftest.py  test_api.py  test_chat_service.py  test_chat_service_resource_routing.py  test_chats.py  test_event_stream.py  test_ingestion_job_stream.py  test_ingestion_worker.py  test_job_stream.py  test_llm_message_generator.py  test_message_observer.py  test_resource_refs.py  test_resource_repository.py  test_resource_service.py  test_result_consumer.py
tests/api/: test_chats.py  test_list_resources.py  test_messages.py  test_modify_message.py  test_not_found.py  test_resource_message_processing.py  test_retry.py  test_streaming.py  test_upload_resource.py
tests/auth/: test_authentication.py  test_authorization.py
tests/end2end/: helpers.py  test_not_found.py  test_refresh.py  test_resource_message_processing.py  test_streaming.py
tests/integration/: conftest.py  test_event_stream.py  test_job_stream.py  test_llm_message_generator.py  test_resource_repository.py
tests/unit/: test_chat_service.py  test_chat_service_job_routing.py  test_message_observer.py  test_message_timeout_estimation.py  test_resource_ref_parsing.py  test_resource_service.py  test_resource_storage.py  test_worker.py
(+35 files in other folders)
