[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "chatops"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "httpx2>=2.4.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "redis>=8.0.1",
]
